 * miscellaneous and bug fixes:
   * various bug fixes and code cleanups
   * fixed a glitch where an item halo shifted position when zooming
   * map label length is correctly determined for multibyte characters
     and thus the limit has been reduced to 32 characters again (bug #6855)
   * now using :n in debug mode will skip past linger mode as intended

Version 1.3.8:
 * campaigns:
   * Descent into Darkness
     * fixed a bug causing the growth ability of Ghast to not always work
     * fixed a bug in 'A Small Favor - Part 2' preventing one random passage
       from opening up
   * Eastern Invasion
     * new portrait for Konrad II
   * Liberty:
     * fixed the undead transformations not working in 'Unlawful Orders'
     * clarified the objectives in 'The Gray Woods'
   * Northern Rebirth
     * Colored portraits for Sisal and Rakshas
     * Fixed bug in 'Old Friend' where Tallin looses bonus HP, MP and
       experience gained from the Rod of Justice
   * Sceptre of Fire
      * fixed lava expansion in 'Caverns of Flame' not working
   * Son of the Black Eye
     * Fixed bug in 'Saving Inarix' where the blown up bridge wasn't shown
       properly (bug #9817)
   * The South Guard
     * a large number of assorted little polishing tweaks and improvements
     * a somewhat nicer-looking village flag
     * Deoran now has a lvl 3 advancement, and no special AMLA options
     * new sprites for Sir Gerrick
     * removed the leader and hero ellipses until it's decided whether they
       should be used in all campaigns
     * Map for "A Choice In The Fog modified so mermen are actually useful.
     * "Tidings Good And Ill" is now playable even if you didn't recruit
       elves in the previous scenarios (bug #9944).
     * fixed bugs with units sometimes not starting with max HP and movement at
       the beginning of some scenarios.
     * in 'Tidings Good And Ill', you can now recruit and recall the elf