@@ -49,6 +49,7 @@ Version 1.3.8+svn:
    * map label length is correctly determined for multibyte characters
      and thus the limit has been reduced to 32 characters again (bug #6855)
    * now using :n in debug mode will skip past linger mode as intended
+   * fix a bug with [endlevel] result=continue_no_save
 
 Version 1.3.8:
  * campaigns:
